SimpleCloudFromTemplate.yaml
AWSTemplateFormatVersion: 2010-09-09
Description:  This template deploys a VPC in us-east1 with a public subnet. It has an internet gateway, with a default
  route on the public subnet, a Linux t2.micro Instance with Security Group with SSH from your IP. 
    
    
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MySimpleVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: SimpleGateway

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: SimpleSubnet1

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: SimplePublicRoute

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
      
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH from Your IP
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: YOUR CIDER RANGE HERE!!!
      VpcId: !Ref VPC 
  
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: EC2DyanoReadRole
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - 
          Effect: Allow
          Principal:
            Service:
              -ec2.amazonaws.com
          Action:
            - sts: AssumeRole
      Path: /
      
  InstanceDynamoDBPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: AmazonDynamoDBReadOnlyAccess
      PolicyDocument:
      Version: '2012-10-17'
      Statement:
        - Action:
            - 'dynamodb:Query'
            - 'dynamodb:Scan'
          Effect: Allow
          Resource: '*'

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: EC2InstanceProfile
      Path: /
      Roles: 
       - !Ref EC2DynamoReadRole
       
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d3b3274b6c5d4aa
      InstanceType: t2.micro
      SubnetId: !Ref PublicSubnet1
      KeyName: test2
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      Tags:
       - Key: Name
         Value: Simple-httpd-instance     
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash
            yum install httpd -y
            systemctl start
            systemctl enable
            
Outputs:
  PublicIp:
    Description: EC2 Instance Public Ip
    Value: !GetAtt EC2Instance.PublicIp
